Use own version of OpenJCEPlus when JDK has another bundled
When trying to execute tests, the OpenJCEPlus already
bundled with the JDK is used, if available. These changes
allow maven to actually test one's own version.

Signed-off-by: Kostas Tsiounis <kostas.tsiounis@ibm.com>